--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pt.ipleiria.estg.dei.ei.esoft</groupId>
-    <artifactId>minesfinder</artifactId>
+    <artifactId>minesweeper</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
